Fix alignment of button in nav

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -71,8 +71,10 @@ $spv-navigation-logo: 0.3125rem;
     margin-bottom: 0;
     overflow: hidden;
     position: relative;
+    text-align: left;
     text-overflow: ellipsis;
     white-space: nowrap;
+    width: 100%;
 
     &::before {
       content: '';
